# smart-inbox-openenv

./: Dockerfile  README.md  inference.py  interface.py  openenv.yaml  pyproject.toml  run_agent.py
data/: emails.json
scripts/: generate_data.py
server/: app.py  env.py  grader.py
